pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envfrom-pod
spec:
  containers:
  - name: test-container
    image: busybox
    command: [ "/bin/sh", "-c", "sleep 3600" ] # Keep the pod running
  restartPolicy: Never
