pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /etc/nginx/nginx.conf # Destination file in container
      subPath: nginx.conf             # Key from ConfigMap to mount
  volumes:
  - name: config-volume
    configMap:
      name: nginx-config # Name of our ConfigMap
