pod-example.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-container
spec:
  containers:
  - name: nginx-container
    image: nginx:1.25.3
    ports:
    - containerPort: 80
